--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -169,3 +169,22 @@
     padding-right: 2rem;
   }
 }
+
+/* Album Card */
+
+.planyourtrip {
+  margin-top: 1rem;
+}
+
+.album-text {
+  margin-left: 2rem;
+}
+
+.album_largetext {
+  font-size: 40px;
+}
+.album_smalltext {
+  font-size: 25px;
+  color: gray;
+  margin-bottom: 0%;
+}
