Responsive paragraph in travel and culture

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -188,3 +188,9 @@
   color: gray;
   margin-bottom: 0%;
 }
+
+@media only screen and (max-width: 600px) {
+  .travelculture-p {
+    font-size: 0;
+  }
+}
